--- a/app/src/main/res-camera/layout/fragment_camera_basic.xml
+++ b/app/src/main/res-camera/layout/fragment_camera_basic.xml
@@ -13,5 +13,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextureView
+            android:id="@+id/texture_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 </layout>
