--- a/app/src/main/res/layout/fragment_launcher.xml
+++ b/app/src/main/res/layout/fragment_launcher.xml
@@ -11,7 +11,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_font_primary"
+        android:background="@color/color_background"
         android:gravity="bottom"
         android:orientation="vertical">
 
@@ -22,7 +22,7 @@
             android:layout_marginBottom="20dp"
             android:drawableTop="@mipmap/ic_launcher"
             android:text="@string/app_name"
-            android:textColor="@android:color/white"
+            android:textColor="@color/color_font_primary"
             android:textSize="26sp" />
 
     </LinearLayout>
