--- a/app/src/main/res-vxposed/layout/fragment_vxposed.xml
+++ b/app/src/main/res-vxposed/layout/fragment_vxposed.xml
@@ -9,10 +9,17 @@
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <com.zhuzichu.android.widget.toolbar.NiceToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:toolbarTitle="@string/vsposed"
+            app:toolbarTitleTextAppearance="?attr/textAppearanceHeadline6" />
 
         <Button
             android:layout_width="match_parent"
@@ -21,6 +28,16 @@
             android:layout_marginEnd="20dp"
             android:text="制作分身"
             app:onClickCommand="@{viewModel.onClickCreateApp}" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:itemBinding="@{viewModel.itemBinding}"
+            app:items="@{viewModel.items}"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:lineManager="@{viewModel.gridSpacing(3)}"
+            app:spanCount="3" />
 
     </LinearLayout>
 </layout>
