--- a/app/src/main/res/navigation/navigation_virtual_loading.xml
+++ b/app/src/main/res/navigation/navigation_virtual_loading.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_virtual_loading">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_virtual_loading"
+    app:startDestination="@id/fragmentVirtualLoading">
 
+    <fragment
+        android:id="@+id/fragmentVirtualLoading"
+        android:name="com.zhuzichu.android.wan.ui.demo.vxposed.loading.fragment.FragmentVirtualLoading"
+        android:label="FragmentVirtualLoading"
+        tools:layout="@layout/fragment_virtual_loading" />
 </navigation>
