--- a/shared/src/main/res/values/themes.xml
+++ b/shared/src/main/res/values/themes.xml
@@ -3,6 +3,15 @@
 
     <style name="MyTheme.DayNight" parent="Base.MyTheme" />
 
+    <style name="MyTheme.TransparentTheme" parent="Base.MyTheme">
+        <item name="android:windowNoTitle">true</item>
+        <item name="colorPrimary">@android:color/background_dark</item>
+        <item name="colorPrimaryDark">@android:color/background_dark</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
     <style name="Base.MyTheme" parent="Base.MaterialThemeBuilder">
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryVariant">@color/color_primary_variant</item>
