--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -14,6 +14,13 @@
         android:title="@string/category" />
 
     <item
+        android:id="@+id/main_tab_demo"
+        android:enabled="true"
+        android:icon="@drawable/ic_main_demo"
+        android:title="@string/demo" />
+
+
+    <item
         android:id="@+id/main_tab_me"
         android:enabled="true"
         android:icon="@drawable/ic_main_me"
