--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -18,9 +18,6 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:onClickEndCommand="@{viewModel.onClickExit}"
             app:onClickStartCommand="@{viewModel.onBackCommand}"
             app:toolbarEndIcon="@drawable/ic_cancle"
@@ -29,15 +26,10 @@
             app:toolbarTitleTextAppearance="?attr/textAppearanceHeadline6" />
 
         <FrameLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-
-
-            <WebView
-                android:id="@+id/webview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
 
             <View
                 android:layout_width="match_parent"
